DEM-2959 Make url https by default. Rename config options in the md and example html

--- a/integrationExamples/gpt/liveConnect_example.html
+++ b/integrationExamples/gpt/liveConnect_example.html
@@ -54,12 +54,11 @@
                     }
                 },
                 liveConnect: {
-                    providedFirstPartyIdentifier: "JSESSIONID",
-                    scrapedIdentifiers: ["pubcid", "_parrable_eid"],
+                    userIdentifier: "pubcid",
+                    additionalUserIdentifiers: ["_parrable_eid"],
                     storage: {
-                        type: "html5",
-                        name: "my_liveConnect_cookie",
-                        expires: 60
+                        type: "cookie",
+                        expires: 600
                     }
                 }
             });
